[package]
name = "carveout"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2021"

[lib]
crate-type = [ "rlib", "cdylib" ]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = "0.27.2"
wgpu = { version = "0.13.1", features = [ "spirv" ] }

egui = { version = "0.19.0", default-features = false, features = [ "tracing" ] }
egui-winit = { version = "0.19.0", default-features = false, features = [ "links" ] }
egui-wgpu = "0.19.0"

lyon = "1.0.0"
palette = { version = "0.6.0", features = [ "serializing" ] }

nalgebra = { version = "0.31.1", features = [ "bytemuck", "serde-serialize" ] }
parry2d = "0.9.0"
typed-spaces = { git = "https://github.com/lu15w1r7h/typed-spaces.git" }

tracing = "0.1.26"
tracing-subscriber = "0.3.15"

serde = { version = "1.0.143", features = [ "derive" ] }
serde_traitobject = "0.2.7"
ron = "0.8"

encase = { version = "0.3.0", features = [ "nalgebra" ] }
bytemuck = { version = "1.7.2", features = [ "derive" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
directories = "4.0.1"

futures = "0.3.16"
once_cell = "1.13.0"
replace_with = "0.1.7"
dyn-clone = "1.0.9"
egui_file = "0.2.0"
cfg-if = "1.0.0"
instant = "0.1.12"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.19.0", default-features = false, features = [ "links", "clipboard" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.13", features = ["webgl"]}
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
]}

