[package]
name = "carveout"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2021"

[lib]
crate-type = [ "rlib", "cdylib" ]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = { version = "0.27.4", features = [ "mint" ] }
wgpu = "0.13.1"

egui = { version = "0.19.0", default-features = false, features = [ "tracing", "mint" ] }
egui-winit = { version = "0.19.0", default-features = false, features = [ "links" ] }
egui-wgpu = "0.19.0"
egui_file = "0.2.0"

pdfium-render = { git = "https://github.com/lu15w1r7h/pdfium-render" }

lyon = "1.0.0"
palette = { version = "0.6.1", features = [ "serializing" ] }

nalgebra = { version = "0.31.2", features = [ "bytemuck", "serde-serialize", "convert-mint" ] }
parry2d = "0.10.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

serde = { version = "1.0.145", features = [ "derive" ] }
ron = "0.8"

encase = { version = "0.3.0", features = [ "nalgebra" ] }
bytemuck = { version = "1.12.1", features = [ "derive" ] }
chrono = { version = "0.4.22", features = [ "serde" ] }
directories = "4.0.1"
mint = "0.5.9"

futures = "0.3.25"
once_cell = "1.15.0"
replace_with = "0.1.7"
cfg-if = "1.0.0"
instant = "0.1.12"
ouroboros = "0.15.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.19.0", default-features = false, features = [ "links", "clipboard" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
]}

console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

wgpu = { version = "0.14", features = ["webgl"]}
getrandom = { version = "0.2", features = ["js"] }
