[package]
name = "carveout"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2021"

[lib]
crate-type = [ "rlib", "cdylib" ]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = { version = "0.28.2", features = [ "mint" ] }
wgpu = "0.15.1"

egui = { version = "0.21.0", default-features = false, features = [ "tracing", "mint" ] }
egui-winit = { version = "0.21.1", default-features = false, features = [ "links" ] }
egui-wgpu = "0.21.0"
egui_file = "0.8.0"

pdfium-render = "0.7.32"

lyon = "1.0.1"
palette = { version = "0.6.1", features = [ "serializing" ] }

nalgebra = { version = "0.32.1", features = [ "bytemuck", "serde-serialize", "convert-mint" ] }
parry2d = "0.13.1"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

serde = { version = "1.0.152", features = [ "derive" ] }
ron = "0.8"

encase = { version = "0.5.0", features = [ "nalgebra" ] }

bytemuck = { version = "1.13.1", features = [ "derive" ] }
chrono = { version = "0.4.23", features = [ "serde" ] }
directories = "4.0.1"
mint = "0.5.9"

futures = "0.3.26"
once_cell = "1.17.1"
replace_with = "0.1.7"
cfg-if = "1.0.0"
instant = "0.1.12"
ouroboros = "0.15.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.21.1", default-features = false, features = [ "links", "clipboard" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
]}

console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

wgpu = { version = "0.15", features = ["webgl"]}
getrandom = { version = "0.2", features = ["js"] }
